OLS - add license & small fix for querying hierarchy
Signed-off-by: Raluca Popa <raluca.popa2@ing.com>